<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_name"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_desc"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_address"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_lat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_lat"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_lng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_lng"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="?colorOnPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/label_change"
            android:layout_marginStart="15dp"
            android:paddingHorizontal="10dp"
            android:background="@drawable/label_border"
            android:textSize="17sp" />

    </RelativeLayout>
</LinearLayout>